Make it work now bitch

--- a/public/blackteam.html
+++ b/public/blackteam.html
@@ -13,7 +13,7 @@
             <div class="row8" id="r8">
                 <div class="black" id="88">
                     <div class="light-team" id="lt">
-                        <div class="lightrook" id="lr2" aria-label="dark">
+                        <div class="lightrook" id="lr2" aria-label="light">
                             <img src="Chess_Pieces/lightrook.png" alt="" aria-label="light">
                         </div>
                     </div>
@@ -48,7 +48,7 @@
                 </div>
                 <div class="white" id="83">
                     <div class="light-team" id="lt">
-                        <div class="lightbishop" id="lb1" aria-label="dark">
+                        <div class="lightbishop" id="lb1" aria-label="light">
                             <img src="Chess_Pieces/lightbishop.png" alt="" aria-label="light">
                         </div>
                     </div>
