This is alot better

--- a/public/blackteam.html
+++ b/public/blackteam.html
@@ -40,8 +40,8 @@
                     </div>
                 </div>
                 <div class="black" id="84">
-                    <div class="light-team" id="lt">
-                        <div class="lightqueen" id="lq" aria-label="light">
+                    <div class="light-team" id="lt" draggable="true">
+                        <div class="lightqueen" id="lq" aria-label="light" draggable="true">
                             <img src="Chess_Pieces/lightqueen.png" alt="" aria-label="light">
                         </div>
                     </div>
@@ -107,7 +107,7 @@
                 <div class="black" id="73">
                     <div class="light-team" id="lt">
                         <div class="lightpawn" id="lp3" aria-label="light">
-                            <img src="Chess_Pieces/lightpawn.png" alt="" aria-label="light">
+                            <img src="Chess_Pieces/lightpawn.png" alt="pawn" aria-label="light">
                         </div>
                     </div>
                 </div>
@@ -119,8 +119,8 @@
                     </div>
                 </div>
                 <div class="black" id="71">
-                    <div class="light-team" id="lt">
-                        <div class="lightpawn" id="lp1" aria-label="light">
+                    <div class="light-team" id="lt" draggable="true">
+                        <div class="lightpawn" id="lp1" aria-label="light" draggable="true">
                             <img src="Chess_Pieces/lightpawn.png" alt="" aria-label="light">
                         </div>
                     </div>
