--- a/public/blackteam.html
+++ b/public/blackteam.html
@@ -62,7 +62,7 @@
                 </div>
                 <div class="white" id="81">
                     <div class="light-team" id="lt">
-                        <div class="darkrook" id="lr1" aria-label="light">
+                        <div class="lightrook" id="lr1" aria-label="light">
                             <img src="Chess_Pieces/lightrook.png" alt="" aria-label="light">
                         </div>
                     </div>
