made it smaller

--- a/public/blackteam.html
+++ b/public/blackteam.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Welcome To Chess</title> 
-        <link rel="stylesheet" href="Style.css">
+        <link rel="stylesheet" href="smallstyle.css">
     </head>
     <header>
         <h1>Chess Game</h1>
@@ -40,8 +40,8 @@
                     </div>
                 </div>
                 <div class="black" id="84">
-                    <div class="light-team" id="lt" draggable="true">
-                        <div class="lightqueen" id="lq" aria-label="light" draggable="true">
+                    <div class="light-team" id="lt">
+                        <div class="lightqueen" id="lq" aria-label="light">
                             <img src="Chess_Pieces/lightqueen.png" alt="" aria-label="light">
                         </div>
                     </div>
