--- a/public/whiteteam.html
+++ b/public/whiteteam.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Welcome To Chess</title> 
-        <link rel="stylesheet" href="Style.css">
+        <link rel="stylesheet" href="smallstyle.css">
     </head>
     <header>
         <h1>Chess Game</h1>
@@ -276,7 +276,7 @@
                 </div>
                 <div class="black" id="88">
                     <div class = "light-team" id = "lt">
-                        <div class="lighrook" id="lr2" aria-label="light">
+                        <div class="lightrook" id="lr2" aria-label="light">
                             <img src="Chess_Pieces/lightrook.png" alt="" aria-label="light">
                         </div>
                     </div>
