Make it smaller and better

--- a/public/whiteteam.html
+++ b/public/whiteteam.html
@@ -14,56 +14,56 @@
                 <div class="black" id="11">
                     <div class="dark-team" id="dt">
                         <div class="darkrook" id="dr1" aria-label="dark">
-                            <img src="Chess_Pieces/darkrook.png" alt="" aria-label="dark">
+                            <img src="Chess_Pieces/smdarkrook.png" alt="" aria-label="dark">
                         </div>
                     </div>
                 </div>
                 <div class="white" id="12">
                     <div class="dark-team" id="dt">
                         <div class="darkknight" id="dk1" aria-label="dark">
-                            <img src="Chess_Pieces/darkknight.png" alt="" aria-label="dark">
+                            <img src="Chess_Pieces/smdarkknight.png" alt="" aria-label="dark">
                         </div>
                     </div>
                 </div>
                 <div class="black" id="13">
                     <div class="dark-team" id="dt">
                         <div class="darkbishop" id="db1" aria-label="dark">
-                            <img src="Chess_Pieces/darkbishop.png" alt="" aria-label="dark">
+                            <img src="Chess_Pieces/smdarkbishop.png" alt="" aria-label="dark">
                         </div>
                     </div>
                 </div>
                 <div class="white" id="14">
                     <div class="dark-team" id="dt">
                         <div class="darkking" id="dk" aria-label="dark">
-                            <img src="Chess_Pieces/darkking.png" alt="" aria-label="dark">
+                            <img src="Chess_Pieces/smdarkking.png" alt="" aria-label="dark">
                         </div>
                     </div>
                 </div>
                 <div class="black" id="15">
                     <div class="dark-team" id="dt">
                         <div class="darkqueen" id="dq" aria-label="dark">
-                            <img src="Chess_Pieces/darkqueen.png" alt="" aria-label="dark">
+                            <img src="Chess_Pieces/smdarkqueen.png" alt="" aria-label="dark">
                         </div>
                     </div>
                 </div>
                 <div class="white" id="16">
                     <div class="dark-team" id="dt">
                         <div class="darkbishop" id="db2" aria-label="dark">
-                            <img src="Chess_Pieces/darkbishop.png" alt="" aria-label="dark">
+                            <img src="Chess_Pieces/smdarkbishop.png" alt="" aria-label="dark">
                         </div>
                     </div>
                 </div>
                 <div class="black" id="17">
                     <div class="dark-team" id="dt">
                         <div class="darkknight" id="dk2" aria-label="dark">
-                            <img src="Chess_Pieces/darkknight.png" alt="" aria-label="dark">
+                            <img src="Chess_Pieces/smdarkknight.png" alt="" aria-label="dark">
                         </div>
                     </div>
                 </div>
                 <div class="white" id="18">
                     <div class="dark-team" id="dt">
                         <div class="darkrook" id="dr2" aria-label="dark">
-                            <img src="Chess_Pieces/darkrook.png" alt="" aria-label="dark">
+                            <img src="Chess_Pieces/smdarkrook.png" alt="" aria-label="dark">
                         </div>
                     </div>
                 </div>
@@ -72,56 +72,56 @@
                 <div class="white" id="21">
                     <div class="dark-team" id="dt">
                         <div class="darkpawn" id="dp1" aria-label="dark">
-                            <img src="Chess_Pieces/darkpawn.png" alt="" aria-label="dark">
+                            <img src="Chess_Pieces/smdarkpawn.png" alt="" aria-label="dark">
                         </div>
                     </div>
                 </div>
                 <div class="black" id="22">
                     <div class="dark-team" id="dt">
                         <div class="darkpawn" id="dp2" aria-label="dark">
-                            <img src="Chess_Pieces/darkpawn.png" alt="" aria-label="dark">
+                            <img src="Chess_Pieces/smdarkpawn.png" alt="" aria-label="dark">
                         </div>
                     </div>
                 </div>
                 <div class="white" id="23">
                     <div class="dark-team" id="dt">
                         <div class="darkpawn" id="dp3" aria-label="dark">
-                            <img src="Chess_Pieces/darkpawn.png" alt="" aria-label="dark">
+                            <img src="Chess_Pieces/smdarkpawn.png" alt="" aria-label="dark">
                         </div>
                     </div>
                 </div>
                 <div class="black" id="24">
                     <div class="dark-team" id="dt">
                         <div class="darkpawn" id="dp4" aria-label="dark">
-                            <img src="Chess_Pieces/darkpawn.png" alt="" aria-label="dark">
+                            <img src="Chess_Pieces/smdarkpawn.png" alt="" aria-label="dark">
                         </div>
                     </div>
                 </div>
                 <div class="white" id="25">
                     <div class="dark-team" id="dt">
                         <div class="darkpawn" id="dp5" aria-label="dark">
-                            <img src="Chess_Pieces/darkpawn.png" alt="" aria-label="dark">
+                            <img src="Chess_Pieces/smdarkpawn.png" alt="" aria-label="dark">
                         </div>
                     </div>
                 </div>
                 <div class="black" id="26">
                     <div class="dark-team" id="dt">
                         <div class="darkpawn" id="dp6" aria-label="dark">
-                            <img src="Chess_Pieces/darkpawn.png" alt="" aria-label="dark">
+                            <img src="Chess_Pieces/smdarkpawn.png" alt="" aria-label="dark">
                         </div>
                     </div>
                 </div>
                 <div class="white" id="27">
                     <div class="dark-team" id="dt">
                         <div class="darkpawn" id="dp7" aria-label="dark">
-                            <img src="Chess_Pieces/darkpawn.png" alt="" aria-label="dark">
+                            <img src="Chess_Pieces/smdarkpawn.png" alt="" aria-label="dark">
                         </div>
                     </div>
                 </div>
                 <div class="black" id="28">
                     <div class="dark-team" id="dt">
                         <div class="darkpawn" id="dp8" aria-label="dark">
-                            <img src="Chess_Pieces/darkpawn.png" alt="" aria-label="dark">
+                            <img src="Chess_Pieces/smdarkpawn.png" alt="" aria-label="dark">
                         </div>
                     </div>
                 </div>
@@ -170,56 +170,56 @@
                 <div class="black" id="71">
                     <div class="light-team" id="lt">
                         <div class="lightpawn" id="lp1" aria-label="light">
-                            <img src="Chess_Pieces/lightpawn.png" alt="" aria-label="light">
+                            <img src="Chess_Pieces/smlightpawn.png" alt="" aria-label="light">
                         </div>
                     </div>
                 </div>
                 <div class="white" id="72">
                     <div class="light-team" id="lt">
                         <div class="lightpawn" id="lp2" aria-label="light">
-                            <img src="Chess_Pieces/lightpawn.png" alt="" aria-label="light">
+                            <img src="Chess_Pieces/smlightpawn.png" alt="" aria-label="light">
                         </div>
                     </div>
                 </div>
                 <div class="black" id="73">
                     <div class="light-team" id="lt">
                         <div class="lightpawn" id="lp3" aria-label="light">
-                            <img src="Chess_Pieces/lightpawn.png" alt="" aria-label="light">
+                            <img src="Chess_Pieces/smlightpawn.png" alt="" aria-label="light">
                         </div>
                     </div>
                 </div>
                 <div class="white" id="74">
                     <div class="light-team" id="lt">
                         <div class="lightpawn" id="lp4" aria-label="light">
-                            <img src="Chess_Pieces/lightpawn.png" alt="" aria-label="light">
+                            <img src="Chess_Pieces/smlightpawn.png" alt="" aria-label="light">
                         </div>
                     </div>
                 </div>
                 <div class="black" id="75">
                     <div class="light-team" id="lt">
                         <div class="lightpawn" id="lp5" aria-label="light">
-                            <img src="Chess_Pieces/lightpawn.png" alt="" aria-label="light">
+                            <img src="Chess_Pieces/smlightpawn.png" alt="" aria-label="light">
                         </div>
                     </div>
                 </div>
                 <div class="white" id="76">
                     <div class="light-team" id="lt">
                         <div class="lightpawn" id="lp6" aria-label="light">
-                            <img src="Chess_Pieces/lightpawn.png" alt="" aria-label="light">
+                            <img src="Chess_Pieces/smlightpawn.png" alt="" aria-label="light">
                         </div>
                     </div>
                 </div>
                 <div class="black" id="77">
                     <div class="light-team" id="lt">
                         <div class="lightpawn" id="lp7" aria-label="light" >
-                            <img src="Chess_Pieces/lightpawn.png" alt="" aria-label="light">
+                            <img src="Chess_Pieces/smlightpawn.png" alt="" aria-label="light">
                         </div>
                     </div>
                 </div>
                 <div class="white" id="78">
                     <div class="light-team" id="lt">
                         <div class="lightpawn" id="lp8" aria-label="light">
-                            <img src="Chess_Pieces/lightpawn.png" alt="" aria-label="light">
+                            <img src="Chess_Pieces/smlightpawn.png" alt="" aria-label="light">
                         </div>
                     </div>
                 </div>
@@ -228,14 +228,14 @@
                 <div class="white" id="81">
                     <div class="light-team" id="lt">
                         <div class="lightrook" id="lr1" aria-label="light">
-                            <img src="Chess_Pieces/lightrook.png" alt="" aria-label="light">
+                            <img src="Chess_Pieces/smlightrook.png" alt="" aria-label="light">
                         </div>
                     </div>
                 </div>
                 <div class="black" id="82">
                     <div class = "light-team" id = "lt">
                         <div class="lightknight" id="lk1" aria-label="light">
-                            <img src="Chess_Pieces/lightknight.png" alt="" aria-label="light">
+                            <img src="Chess_Pieces/smlightknight.png" alt="" aria-label="light">
                         </div>
                     </div>
                 </div>
@@ -249,35 +249,35 @@
                 <div class="black" id="84">
                     <div class = "light-team" id = "lt">
                         <div class="lightqueen" id="lq" aria-label="light">
-                            <img src="Chess_Pieces/lightqueen.png" alt="" aria-label="light">
+                            <img src="Chess_Pieces/smlightqueen.png" alt="" aria-label="light">
                         </div>
                     </div>
                 </div>
                 <div class="white" id="85">
                     <div class = "light-team" id = "lt">
                         <div class="lightking" id="lk" aria-label="light">
-                            <img src="Chess_Pieces/lightking.png" alt="" aria-label="light">
+                            <img src="Chess_Pieces/smlightking.png" alt="" aria-label="light">
                         </div>
                     </div>
                 </div>
                 <div class="black" id="86">
                     <div class = "light-team" id = "lt">
                         <div class="lightbishop" id="lb2" aria-label="light">
-                            <img src="Chess_Pieces/lightbishop.png" alt="" aria-label="light">
+                            <img src="Chess_Pieces/smlightbishop.png" alt="" aria-label="light">
                         </div>
                     </div>
                 </div>
                 <div class="white" id="87">
                     <div class = "light-team" id = "lt">
                         <div class="lightknight" id="lk2" aria-label="light">
-                            <img src="Chess_Pieces/lightknight.png" alt="" aria-label="light">
+                            <img src="Chess_Pieces/smlightknight.png" alt="" aria-label="light">
                         </div>
                     </div>
                 </div>
                 <div class="black" id="88">
                     <div class = "light-team" id = "lt">
                         <div class="lightrook" id="lr2" aria-label="light">
-                            <img src="Chess_Pieces/lightrook.png" alt="" aria-label="light">
+                            <img src="Chess_Pieces/smlightrook.png" alt="" aria-label="light">
                         </div>
                     </div>
                 </div>
