--- a/public/blackteam.html
+++ b/public/blackteam.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Welcome To Chess</title> 
+        <title id="title">Welcome To Chess</title> 
         <link rel="stylesheet" href="smallstyle.css">
     </head>
     <header>
