--- a/public/board.html
+++ b/public/board.html
@@ -9,9 +9,12 @@
         <h1 id="status">Chess</h1>
     </header>
     <body>
+        <p class="paragraph" id="p"></p>
         <button class="button" id="moves">Moves</button>
         <div class="Chess-Board" id="cb">
             <div class="row1" id="r1">
+                <div class="square" id="00"></div>
+                <div class="square" id="01"></div>
                 <div class="black" id="11"></div>
                 <div class="white" id="12"></div>
                 <div class="black" id="13"></div>
@@ -20,8 +23,12 @@
                 <div class="white" id="16"></div>
                 <div class="black" id="17"></div>
                 <div class="white" id="18"></div>
+                <div class="square" id="19"></div>
+                <div class="square" id="20"></div>
             </div>
             <div class="row2" id="r2">
+                <div class="square" id="02"></div>
+                <div class="square" id="020"></div>
                 <div class="white" id="21"></div>
                 <div class="black" id="22"></div>
                 <div class="white" id="23"></div>
@@ -30,8 +37,12 @@
                 <div class="black" id="26"></div>
                 <div class="white" id="27"></div>
                 <div class="black" id="28"></div>
+                <div class="square" id="29"></div>
+                <div class="square" id="30"></div>
             </div>
             <div class="row3" id="r3">
+                <div class="square" id="03"></div>
+                <div class="square" id="030"></div>
                 <div class="black" id="31"></div>
                 <div class="white" id="32"></div>
                 <div class="black" id="33"></div>
@@ -40,8 +51,12 @@
                 <div class="white" id="36"></div>
                 <div class="black" id="37"></div>
                 <div class="white" id="38"></div>
+                <div class="square" id="39"></div>
+                <div class="square" id="40"></div>
             </div>
             <div class="row4" id="r4">
+                <div class="square" id="04"></div>
+                <div class="square" id="040"></div>
                 <div class="white" id="41"></div>
                 <div class="black" id="42"></div>
                 <div class="white" id="43"></div>
@@ -50,8 +65,12 @@
                 <div class="black" id="46"></div>
                 <div class="white" id="47"></div>
                 <div class="black" id="48"></div>
+                <div class="square" id="49"></div>
+                <div class="square" id="50"></div>
             </div>
             <div class="row5" id="r5">
+                <div class="square" id="05"></div>
+                <div class="square" id="050"></div>
                 <div class="black" id="51"></div>
                 <div class="white" id="52"></div>
                 <div class="black" id="53"></div>
@@ -60,8 +79,12 @@
                 <div class="white" id="56"></div>
                 <div class="black" id="57"></div>
                 <div class="white" id="58"></div>
+                <div class="square" id="59"></div>
+                <div class="square" id="60"></div>
             </div>
             <div class="row6" id="r6">
+                <div class="square" id="06"></div>
+                <div class="square" id="060"></div>
                 <div class="white" id="61"></div>
                 <div class="black" id="62"></div>
                 <div class="white" id="63"></div>
@@ -70,8 +93,12 @@
                 <div class="black" id="66"></div>
                 <div class="white" id="67"></div>
                 <div class="black" id="68"></div>
+                <div class="square" id="69"></div>
+                <div class="square" id="70"></div>
             </div>
             <div class="row7" id="r7">
+                <div class="square" id="07"></div>
+                <div class="square" id="070"></div>
                 <div class="black" id="71"></div>
                 <div class="white" id="72"></div>
                 <div class="black" id="73"></div>
@@ -80,8 +107,12 @@
                 <div class="white" id="76"></div>
                 <div class="black" id="77"></div>
                 <div class="white" id="78"></div>
+                <div class="square" id="79"></div>
+                <div class="square" id="80"></div>
             </div>
             <div class="row8" id="r8">
+                <div class="square" id="08"></div>
+                <div class="square" id="080"></div>
                 <div class="white" id="81"></div>
                 <div class="black" id="82"></div>
                 <div class="white" id="83"></div>
@@ -90,6 +121,8 @@
                 <div class="black" id="86"></div>
                 <div class="white" id="87"></div>
                 <div class="black" id="88"></div>
+                <div class="square" id="89"></div>
+                <div class="square" id="90"></div>
             </div>
         </div>
     </body>
