--- a/public/board.html
+++ b/public/board.html
@@ -7,10 +7,10 @@
     </head>
     <header>
         <h1 id="status">Chess</h1>
+        <p class="paragraph" id="p">New Game</p>
     </header>
     <body>
-        <p class="paragraph" id="p"></p>
-        <button class="button" id="moves">Moves</button>
+        <button class="button rounded-corners" id="moves">Moves On</button>
         <div class="Chess-Board" id="cb">
             <div class="row1" id="r1">
                 <div class="square" id="00"></div>
