Fixed issue with king and the castle move

--- a/public/board.html
+++ b/public/board.html
@@ -10,7 +10,9 @@
         <p class="paragraph" id="p">New Game</p>
     </header>
     <body>
-        <button class="button rounded-corners" id="moves">Moves On</button>
+        <div class="buttoncontainer" id="button_con">
+            <button class="button" id="moves">Moves On</button>
+        </div>
         <div class="Chess-Board" id="cb">
             <div class="row1" id="r1">
                 <div class="square" id="00"></div>
