--- a/public/board.html
+++ b/public/board.html
@@ -14,7 +14,7 @@
             <div class="sub-header">
                 <button class="button rounded-corners" id="moves">Moves On</button>
             </div>
-            <div class="status">
+            <div class="status" id="pdiv">
                 <p class="paragraph" id="p">New Game</p>
             </div>
         </div>
